[gd_scene load_steps=6 format=2]

[ext_resource path="res://Pause.gd" type="Script" id=1]
[ext_resource path="res://Assets/SF Atarian System Bold Italic.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 72
font_data = ExtResource( 2 )

[node name="Pause" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 2.0
margin_right = 1026.0
margin_bottom = 600.0
color = Color( 1, 1, 1, 0.392157 )

[node name="Label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "OPTIONS"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 377.0
margin_top = 260.0
margin_right = 640.0
margin_bottom = 338.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_hover = Color( 0.0901961, 0.890196, 0.854902, 1 )
custom_colors/font_color_pressed = Color( 0.933333, 0.00784314, 0.00784314, 1 )
text = "Resume"

[node name="Button2" type="Button" parent="."]
margin_left = 379.0
margin_top = 367.0
margin_right = 644.0
margin_bottom = 445.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.0901961, 0.890196, 0.854902, 1 )
custom_colors/font_color_pressed = Color( 0.933333, 0.00784314, 0.00784314, 1 )
text = "Main Menu"

[node name="Button3" type="Button" parent="."]
margin_left = 440.0
margin_top = 468.0
margin_right = 573.0
margin_bottom = 546.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_hover = Color( 0.0901961, 0.890196, 0.854902, 1 )
custom_colors/font_color_pressed = Color( 0.933333, 0.00784314, 0.00784314, 1 )
text = "Exit"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="button_down" from="Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="Button3" to="." method="_on_Button3_button_down"]
